backend implement spring security jwt, frontend implement pinia axios interceptor

--- a/test_mfa_oauth_auth_client/src/main/resources/application.properties
+++ b/test_mfa_oauth_auth_client/src/main/resources/application.properties
@@ -1,1 +1,19 @@
-
+# Spring data configuration
+spring.datasource.platform=h2
+spring.datasource.url=jdbc:h2:./h2data/test;AUTO_SERVER=TRUE;NON_KEYWORDS=VALUE,KEY,END,START,MONTH,DATE,NAME,CATEGORY
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=user
+spring.datasource.password=pwd
+spring.h2.console.enabled=true
+## R2DBC configuration
+##spring.r2dbc.url=r2dbc:h2:file:./h2data/test;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+#spring.r2dbc.url=r2dbc:h2:file:///./h2data/test;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+#spring.r2dbc.username=sa
+#spring.r2dbc.password=password
+# jpa configuration
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.open-in-view=false
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+logging.level.org.hibernate.SQL=debug
+server.port=8099
