--- a/vite-project/package.json
+++ b/vite-project/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.6.1",
     "bootstrap": "^5.3.2",
+    "element-plus": "^2.5.3",
     "idb-keyval": "^6.2.1",
     "pinia": "^2.1.7",
     "pinia-plugin-persistedstate": "^3.2.0",
